--- a/homePage.html
+++ b/homePage.html
@@ -494,7 +494,7 @@
                             <div class="recommended">
                                 RECOMMENDED
                             </div>
-                            <img class="card-img-top" src="./assets/img/product-image-62-346x310.jpg"
+                            <img class="card-img-top" src="./assets/img/product-image-50.jpg"
                                 alt="Card image cap">
                             <div class="card-body">
                                 <a href="">All Natural Italian-Style Chicken Meatballs</a>
@@ -512,7 +512,7 @@
                             <div class="recommended">
                                 RECOMMENDED
                             </div>
-                            <img class="card-img-top" src="./assets/img/product-image-62-346x310.jpg"
+                            <img class="card-img-top" src="./assets/img/product-image-7-346x310.jpg"
                                 alt="Card image cap">
                             <div class="card-body">
                                 <a href="">All Natural Italian-Style Chicken Meatballs</a>
@@ -530,7 +530,7 @@
                             <div class="recommended">
                                 RECOMMENDED
                             </div>
-                            <img class="card-img-top" src="./assets/img/product-image-62-346x310.jpg"
+                            <img class="card-img-top" src="./assets/img/product-image-3-346x310.jpg"
                                 alt="Card image cap">
                             <div class="card-body">
                                 <a href="">All Natural Italian-Style Chicken Meatballs</a>
@@ -600,11 +600,189 @@
             </div>
         </section>
         <section id="autoshiporder">
-            <div class="container autoship">
+            <div class="container own-container autoship mt-5 mb-5">
                 <div class="row">
-                    <div class="col-2">
+                    <div class="item mycard custom-col-2">
+                        <div class="card ">
+                            <i class="fas fa-heart"></i>
+                            <div class="percent">
+                                23%
+                            </div>
+                            <div class="recommended">
+                                RECOMMENDED
+                            </div>
+                            <img class="card-img-top" src="./assets/img/product-image-3-346x310 (1).jpg"
+                                alt="Card image cap">
+                            <div class="card-body">
+                                <a href="">All Natural Italian-Style Chicken Meatballs</a>
 
+                                <a href="#" class="btn btn-primary">ADD TO CARD</a>
+                            </div>
+                        </div>
                     </div>
+                    <div class="item mycard custom-col-2">
+                        <div class="card ">
+                            <i class="fas fa-heart"></i>
+                            <div class="percent">
+                                23%
+                            </div>
+                            <div class="recommended">
+                                RECOMMENDED
+                            </div>
+                            <img class="card-img-top" src="./assets/img/product-image-2-346x310.jpg"
+                                alt="Card image cap">
+                            <div class="card-body">
+                                <a href="">All Natural Italian-Style Chicken Meatballs</a>
+
+                                <a href="#" class="btn btn-primary">ADD TO CARD</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item mycard custom-col-2">
+                        <div class="card ">
+                            <i class="fas fa-heart"></i>
+                            <div class="percent">
+                                23%
+                            </div>
+                            <div class="recommended">
+                                RECOMMENDED
+                            </div>
+                            <img class="card-img-top" src="./assets/img/product-image-4-346x310.jpg"
+                                alt="Card image cap">
+                            <div class="card-body">
+                                <a href="">All Natural Italian-Style Chicken Meatballs</a>
+
+                                <a href="#" class="btn btn-primary">ADD TO CARD</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item mycard custom-col-2">
+                        <div class="card ">
+                            <i class="fas fa-heart"></i>
+                            <div class="percent">
+                                23%
+                            </div>
+                            <div class="recommended">
+                                RECOMMENDED
+                            </div>
+                            <img class="card-img-top" src="./assets/img/product-image-346x310.jpg"
+                                alt="Card image cap">
+                            <div class="card-body">
+                                <a href="">All Natural Italian-Style Chicken Meatballs</a>
+
+                                <a href="#" class="btn btn-primary">ADD TO CARD</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item mycard custom-col-2">
+                        <div class="card ">
+                            <i class="fas fa-heart"></i>
+                            <div class="percent">
+                                23%
+                            </div>
+                            <div class="recommended">
+                                RECOMMENDED
+                            </div>
+                            <img class="card-img-top" src="./assets/img/product-image-4-346x310 (1).jpg"
+                                alt="Card image cap">
+                            <div class="card-body">
+                                <a href="">All Natural Italian-Style Chicken Meatballs</a>
+
+                                <a href="#" class="btn btn-primary">ADD TO CARD</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item mycard custom-col-2">
+                        <div class="card ">
+                            <i class="fas fa-heart"></i>
+                            <div class="percent">
+                                23%
+                            </div>
+                            <div class="recommended">
+                                RECOMMENDED
+                            </div>
+                            <img class="card-img-top" src="./assets/img/product-image-5-346x310.jpg"
+                                alt="Card image cap">
+                            <div class="card-body">
+                                <a href="">All Natural Italian-Style Chicken Meatballs</a>
+
+                                <a href="#" class="btn btn-primary">ADD TO CARD</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item mycard custom-col-2">
+                        <div class="card ">
+                            <i class="fas fa-heart"></i>
+                            <div class="percent">
+                                23%
+                            </div>
+                            <div class="recommended">
+                                RECOMMENDED
+                            </div>
+                            <img class="card-img-top" src="./assets/img/product-image-3-346x310.jpg"
+                                alt="Card image cap">
+                            <div class="card-body">
+                                <a href="">All Natural Italian-Style Chicken Meatballs</a>
+
+                                <a href="#" class="btn btn-primary">ADD TO CARD</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item mycard custom-col-2">
+                        <div class="card ">
+                            <i class="fas fa-heart"></i>
+                            <div class="percent">
+                                23%
+                            </div>
+                            <div class="recommended">
+                                RECOMMENDED
+                            </div>
+                            <img class="card-img-top" src="./assets/img/product-image-3-346x310 (1).jpg"
+                                alt="Card image cap">
+                            <div class="card-body">
+                                <a href="">All Natural Italian-Style Chicken Meatballs</a>
+
+                                <a href="#" class="btn btn-primary">ADD TO CARD</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item mycard custom-col-2">
+                        <div class="card ">
+                            <i class="fas fa-heart"></i>
+                            <div class="percent">
+                                23%
+                            </div>
+                            <div class="recommended">
+                                RECOMMENDED
+                            </div>
+                            <img class="card-img-top" src="./assets/img/product-image-4-346x310 (1).jpg"
+                                alt="Card image cap">
+                            <div class="card-body">
+                                <a href="">All Natural Italian-Style Chicken Meatballs</a>
+
+                                <a href="#" class="btn btn-primary">ADD TO CARD</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item mycard custom-col-2">
+                        <div class="card ">
+                            <i class="fas fa-heart"></i>
+                            <div class="percent">
+                                23%
+                            </div>
+                            <div class="recommended">
+                                RECOMMENDED
+                            </div>
+                            <img class="card-img-top" src="./assets/img/product-image-4-346x310 (1).jpg"
+                                alt="Card image cap">
+                            <div class="card-body">
+                                <a href="">All Natural Italian-Style Chicken Meatballs</a>
+
+                                <a href="#" class="btn btn-primary">ADD TO CARD</a>
+                            </div>
+                        </div>
+                    </div>
+                    
                 </div>
             </div>
         </section>
