Header is Ready

--- a/homePage.html
+++ b/homePage.html
@@ -140,7 +140,7 @@
 
                     </div>
                     <div class="col-lg-9 navbar">
-                        <ul>
+                        <ul class="mainul">
                             <li class="active"><a href="">HOME</a></li>
                             <li><a href="">SHOP</a></li>
                             <li><a href="">MEATS&SEAFOOD</a></li>
@@ -153,13 +153,134 @@
                 </div>
             </div>
         </section>
-        <section id="z-index">
-            <div class="mylist">
-
-            </div>
-        </section>
         <hr>
+        <div class="allcatagoriescontent d-none">
+            <ul>
+                <li class="">
+                    <div class="btn-group dropright">
+                        <button type="button" class="btn dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
+                            aria-expanded="false">
+                            <a href=""><i class="fab fa-apple"></i> Fruits & Vegetables</a>
+                        </button>
+                        <div class="dropdown-menu mx-4 sub-menu" x-placement="right-start"
+                            style="position: absolute; transform: translate3d(111px, 0px, 0px); top: 0px; left: 0px; will-change: transform;">
+                            <ul class="sub-menu">
+                                <li><a> href="">Cuts & Sprouts</a></li>
+                                <li><a href="">Exotic Fruits & Veggies</a></li>
+                                <li><a href="">Fresh Fruits</a></li>
+                                <li><a> Fresh Vegetables</a></li>
+                                <li><a>Herbs & Seasonings</a></li>
+                                <li><a>Packaged Produce</a></li>
+                                <li><a>PartyTrays</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                <li>
+                    <a href=""><i class="fas fa-drumstick-bite"></i> Fruits & Vegetables</a>
+                </li>
+                <li>
+                    <a href=""><i class="fas fa-egg"></i> Fruits & Vegetables</a>
+                </li>
+                <li>
+                    <a href=""><i class="fas fa-glass-martini"></i> Fruits & Vegetables</a>
+                </li>
+                <li>
+                    <a href=""><i class="fas fa-ice-cream"></i> Fruits & Vegetables</a>
+                </li>
+                <li>
+                    <a href=""><i class="fas fa-ice-cream"></i> Fruits & Vegetables</a>
+                </li>
+                <li>
+                    <a href=""><i class="fas fa-birthday-cake"></i> Fruits & Vegetables</a>
+                </li>
+                <li>
+                    <a href=""> <i class="fas fa-birthday-cake"></i> Fruits & Vegetables</a>
+                </li>
+                <li>
+                    <a href=""><i class="fas fa-birthday-cake"></i>Fruits & Vegetables</a>
+                </li>
+                <li>
+                    <a href=""><i class="fas fa-birthday-cake"></i> Fruits & Vegetables</a>
+                </li>
+                <li>
+                    <a href=""><i class="fas fa-birthday-cake"></i> Fruits & Vegetables</a>
+                </li>
 
+            </ul>
+        </div>
+        <div class="homesections">
+            <ul>
+                <li>Home1</li>
+                <li>Home2</li>
+                <li>Home3</li>
+                <li>Home4</li>
+                <li>Home5</li>
+            </ul>
+        </div>
+        <div class="shopsections d-none">
+            <ul>
+                <li> </a>
+                    <ul class=" ">
+                        <li>
+                            <a href=""><span>Shop Default</span></a>
+                        </li>
+                        <li><span>Shop Right Sidebar</span></a></li>
+                        <li><span>Shop Wide</span></a></li>
+                        <li><span>List Left Sidebar</span></a></li>
+                        <li><span>Load More Button</span></a></li>
+                        <li><span>Infinite Scrolling</span></a></li>
+                    </ul>
+                </li>
+                <li> </a>
+                    <ul class=" ">
+                        <li>
+                            <a href=""><span>Shop Default</span></a>
+                        </li>
+                        <li><span>Shop Right Sidebar</span></a></li>
+                        <li><span>Shop Wide</span></a></li>
+                        <li><span>List Left Sidebar</span></a></li>
+                        <li><span>Load More Button</span></a></li>
+                        <li><span>Infinite Scrolling</span></a></li>
+                    </ul>
+                </li>
+                <li> </a>
+                    <ul class=" ">
+                        <li>
+                            <a href=""><span>Shop Default</span></a>
+                        </li>
+                        <li><span>Shop Right Sidebar</span></a></li>
+                        <li><span>Shop Wide</span></a></li>
+                        <li><span>List Left Sidebar</span></a></li>
+                        <li><span>Load More Button</span></a></li>
+                        <li><span>Infinite Scrolling</span></a></li>
+                    </ul>
+                </li>
+                <li> </a>
+                    <ul class=" ">
+                        <li>
+                            <a href=""><span>Shop Default</span></a>
+                        </li>
+                        <li><span>Shop Right Sidebar</span></a></li>
+                        <li><span>Shop Wide</span></a></li>
+                        <li><span>List Left Sidebar</span></a></li>
+                        <li><span>Load More Button</span></a></li>
+                        <li><span>Infinite Scrolling</span></a></li>
+                    </ul>
+                </li>
+                <li> </a>
+                    <ul class=" ">
+                        <li>
+                            <a href=""><span>Shop Default</span></a>
+                        </li>
+                        <li><span>Shop Right Sidebar</span></a></li>
+                        <li><span>Shop Wide</span></a></li>
+                        <li><span>List Left Sidebar</span></a></li>
+                        <li><span>Load More Button</span></a></li>
+                        <li><span>Infinite Scrolling</span></a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
     </header>
     <main>
         <section id="slider">
@@ -494,8 +615,7 @@
                             <div class="recommended">
                                 RECOMMENDED
                             </div>
-                            <img class="card-img-top" src="./assets/img/product-image-50.jpg"
-                                alt="Card image cap">
+                            <img class="card-img-top" src="./assets/img/product-image-50.jpg" alt="Card image cap">
                             <div class="card-body">
                                 <a href="">All Natural Italian-Style Chicken Meatballs</a>
 
@@ -665,8 +785,7 @@
                             <div class="recommended">
                                 RECOMMENDED
                             </div>
-                            <img class="card-img-top" src="./assets/img/product-image-346x310.jpg"
-                                alt="Card image cap">
+                            <img class="card-img-top" src="./assets/img/product-image-346x310.jpg" alt="Card image cap">
                             <div class="card-body">
                                 <a href="">All Natural Italian-Style Chicken Meatballs</a>
 
@@ -782,7 +901,7 @@
                             </div>
                         </div>
                     </div>
-                    
+
                 </div>
             </div>
         </section>
@@ -831,36 +950,7 @@
                         <div class="mylistelements">
                             <h4>FRUIT &amp; VEGETABLES</h4>
                             <div class="">
-                                <ul >
-                                    <li>
-                                        <a href="#">FreshVegetables</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Herbs&amp; Seasonings</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">FreshFruits</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Cuts&amp; Sprouts</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">ExoticFruits & Veggies</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">PackagedProduce</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">PartyTrays</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div><div class="col-12 col-lg-2 mx-3">
-                        <div class="mylistelements">
-                            <h4>FRUIT &amp; VEGETABLES</h4>
-                            <div class="">
-                                <ul >
+                                <ul>
                                     <li>
                                         <a href="#">FreshVegetables</a>
                                     </li>
@@ -890,7 +980,7 @@
                         <div class="mylistelements">
                             <h4>FRUIT &amp; VEGETABLES</h4>
                             <div class="">
-                                <ul >
+                                <ul>
                                     <li>
                                         <a href="#">FreshVegetables</a>
                                     </li>
@@ -920,7 +1010,7 @@
                         <div class="mylistelements">
                             <h4>FRUIT &amp; VEGETABLES</h4>
                             <div class="">
-                                <ul >
+                                <ul>
                                     <li>
                                         <a href="#">FreshVegetables</a>
                                     </li>
@@ -950,7 +1040,37 @@
                         <div class="mylistelements">
                             <h4>FRUIT &amp; VEGETABLES</h4>
                             <div class="">
-                                <ul >
+                                <ul>
+                                    <li>
+                                        <a href="#">FreshVegetables</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Herbs&amp; Seasonings</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">FreshFruits</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Cuts&amp; Sprouts</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">ExoticFruits & Veggies</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">PackagedProduce</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">PartyTrays</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-lg-2 mx-3">
+                        <div class="mylistelements">
+                            <h4>FRUIT &amp; VEGETABLES</h4>
+                            <div class="">
+                                <ul>
                                     <li>
                                         <a href="#">FreshVegetables</a>
                                     </li>
