--- a/cardPage.html
+++ b/cardPage.html
@@ -7,10 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="./assets/css/owl.carousel.min.css">
-    <link rel="stylesheet" href="./assets/css/owl.theme.default.min.css">
+    <link rel="stylesheet" href="./assets/css/owl.carousel.css">
+    <link rel="stylesheet" href="./assets/css/owl.theme.default.css">
     <link rel="stylesheet" href="./assets/css/flipclock.css" />
-    <link rel="stylesheet" href="./assets/css/card.css">
+    <link rel="stylesheet" href="./assets/css/CARD/card.css">
     <title>Bacola</title>
 </head>
 
@@ -299,38 +299,45 @@
                                 </div>
                                 <div class="row border-top border-bottom">
                                     <div class="row main align-items-center">
-                                        <div class="col-2"><img class="img-fluid" src="https://i.imgur.com/1GrakTl.jpg"></div>
+                                        <div class="col-2"><img class="img-fluid" src="./assets/img/product-image-2-346x310.jpg">
+                                        </div>
                                         <div class="col">
                                             <div class="row text-muted">Shirt</div>
                                             <div class="row">Cotton T-shirt</div>
                                         </div>
-                                        <div class="col"> <a href="#">-</a><a href="#" class="border">1</a><a href="#">+</a> </div>
+                                        <div class="col"> <a href="#">-</a><a href="#" class="border">1</a><a
+                                                href="#">+</a> </div>
                                         <div class="col">&euro; 44.00 <span class="close">&#10005;</span></div>
                                     </div>
                                 </div>
                                 <div class="row">
                                     <div class="row main align-items-center">
-                                        <div class="col-2"><img class="img-fluid" src="https://i.imgur.com/ba3tvGm.jpg"></div>
+                                        <div class="col-2"><img class="img-fluid" src="./assets/img/product-image-4-346x310 (1).jpg">
+                                        </div>
                                         <div class="col">
                                             <div class="row text-muted">Shirt</div>
                                             <div class="row">Cotton T-shirt</div>
                                         </div>
-                                        <div class="col"> <a href="#">-</a><a href="#" class="border">1</a><a href="#">+</a> </div>
+                                        <div class="col"> <a href="#">-</a><a href="#" class="border">1</a><a
+                                                href="#">+</a> </div>
                                         <div class="col">&euro; 44.00 <span class="close">&#10005;</span></div>
                                     </div>
                                 </div>
                                 <div class="row border-top border-bottom">
                                     <div class="row main align-items-center">
-                                        <div class="col-2"><img class="img-fluid" src="https://i.imgur.com/pHQ3xT3.jpg"></div>
+                                        <div class="col-2"><img class="img-fluid" src="./assets/img/product-image-5-346x310.jpg">
+                                        </div>
                                         <div class="col">
                                             <div class="row text-muted">Shirt</div>
                                             <div class="row">Cotton T-shirt</div>
                                         </div>
-                                        <div class="col"> <a href="#">-</a><a href="#" class="border">1</a><a href="#">+</a> </div>
+                                        <div class="col"> <a href="#">-</a><a href="#" class="border">1</a><a
+                                                href="#">+</a> </div>
                                         <div class="col">&euro; 44.00 <span class="close">&#10005;</span></div>
                                     </div>
                                 </div>
-                                <div class="back-to-shop"><a href="#">&leftarrow;</a><span class="text-muted">Back to shop</span></div>
+                                <div class="back-to-shop"><a href="#">&leftarrow;</a><span class="text-muted">Back to
+                                        shop</span></div>
                             </div>
                             <div class="col-md-4 summary">
                                 <div>
