--- a/homePage.html
+++ b/homePage.html
@@ -142,7 +142,7 @@
                     <div class="col-lg-9 navbar">
                         <ul class="mainul">
                             <li class="active"><a href="">HOME</a></li>
-                            <li><a href="">SHOP</a></li>
+                            <li><a href="./cardPage.html">SHOP</a></li>
                             <li><a href="">MEATS&SEAFOOD</a></li>
                             <li><a href="">BAKERY</a></li>
                             <li><a href="">BAVERAGES</a></li>
