--- a/cardPage.html
+++ b/cardPage.html
@@ -141,8 +141,8 @@
                     </div>
                     <div class="col-lg-9 navbar">
                         <ul class="mainul">
-                            <li class="active"><a href="">HOME</a></li>
-                            <li><a href="">SHOP</a></li>
+                            <li ><a href="./homePage.html">HOME</a></li>
+                            <li class="active"><a href="./cardPage.html">SHOP</a></li>
                             <li><a href="">MEATS&SEAFOOD</a></li>
                             <li><a href="">BAKERY</a></li>
                             <li><a href="">BAVERAGES</a></li>
@@ -288,16 +288,16 @@
                 <div class="col-12">
                     <div class="card">
                         <div class="row">
-                            <div class="col-md-8 cart">
+                            <div class="col-md-8 cart products">
                                 <div class="title">
                                     <div class="row">
                                         <div class="col">
                                             <h4><b>Shopping Cart</b></h4>
                                         </div>
-                                        <div class="col align-self-center text-right text-muted">3 items</div>
+                                        <div class="col align-self-center text-right text-muted totalitems">3 items</div>
                                     </div>
                                 </div>
-                                <div class="row border-top border-bottom">
+                                <div class="row border-top border-bottom product">
                                     <div class="row main align-items-center">
                                         <div class="col-2"><img class="img-fluid" src="./assets/img/product-image-2-346x310.jpg">
                                         </div>
@@ -305,25 +305,25 @@
                                             <div class="row text-muted">Shirt</div>
                                             <div class="row">Cotton T-shirt</div>
                                         </div>
-                                        <div class="col"> <a href="#">-</a><a href="#" class="border">1</a><a
-                                                href="#">+</a> </div>
-                                        <div class="col">&euro; 44.00 <span class="close">&#10005;</span></div>
+                                        <div class="col"> <a href="#" data-filter="minus">-</a><a href="#" class="border">1</a><a
+                                                href="#" data-filter="pilus">+</a> </div>
+                                        <div class="col" data-filter="price">29.00 <span class="close">&#10005;</span></div>
                                     </div>
                                 </div>
                                 <div class="row">
-                                    <div class="row main align-items-center">
+                                    <div class="row main align-items-center product">
                                         <div class="col-2"><img class="img-fluid" src="./assets/img/product-image-4-346x310 (1).jpg">
                                         </div>
                                         <div class="col">
                                             <div class="row text-muted">Shirt</div>
                                             <div class="row">Cotton T-shirt</div>
                                         </div>
-                                        <div class="col"> <a href="#">-</a><a href="#" class="border">1</a><a
-                                                href="#">+</a> </div>
-                                        <div class="col">&euro; 44.00 <span class="close">&#10005;</span></div>
+                                        <div class="col"> <a href="#" data-filter="minus">-</a><a href="#" class="border">1</a><a
+                                                href="#" data-filter="pilus">+</a> </div>
+                                        <div class="col"> 85.00 <span class="close">&#10005;</span></div>
                                     </div>
                                 </div>
-                                <div class="row border-top border-bottom">
+                                <div class="row border-top border-bottom product">
                                     <div class="row main align-items-center">
                                         <div class="col-2"><img class="img-fluid" src="./assets/img/product-image-5-346x310.jpg">
                                         </div>
@@ -331,12 +331,12 @@
                                             <div class="row text-muted">Shirt</div>
                                             <div class="row">Cotton T-shirt</div>
                                         </div>
-                                        <div class="col"> <a href="#">-</a><a href="#" class="border">1</a><a
-                                                href="#">+</a> </div>
-                                        <div class="col">&euro; 44.00 <span class="close">&#10005;</span></div>
+                                        <div class="col"> <a href="#" data-filter="minus">-</a><a href="#" class="border">1</a><a
+                                                href="#" data-filter="pilus">+</a> </div>
+                                        <div class="col">44.00 <span class="close">&#10005;</span></div>
                                     </div>
                                 </div>
-                                <div class="back-to-shop"><a href="#">&leftarrow;</a><span class="text-muted">Back to
+                                <div class="back-to-shop"><a href="./homePage.html">&leftarrow;</a><span class="text-muted">Back to
                                         shop</span></div>
                             </div>
                             <div class="col-md-4 summary">
@@ -345,8 +345,8 @@
                                 </div>
                                 <hr>
                                 <div class="row">
-                                    <div class="col" style="padding-left:0;">ITEMS 3</div>
-                                    <div class="col text-right">&euro; 132.00</div>
+                                    <div class="col items" style="padding-left:0;">ITEMS 3</div>
+                                    <div class="col text-right totalprice">132.00</div>
                                 </div>
                                 <form>
                                     <p>SHIPPING</p> <select>
@@ -356,7 +356,7 @@
                                 </form>
                                 <div class="row" style="border-top: 1px solid rgba(0,0,0,.1); padding: 2vh 0;">
                                     <div class="col">TOTAL PRICE</div>
-                                    <div class="col text-right">&euro; 137.00</div>
+                                    <div class="col text-right delivery">&euro; 137.00</div>
                                 </div> <button class="btn">CHECKOUT</button>
                             </div>
                         </div>
@@ -595,7 +595,7 @@
         crossorigin="anonymous"></script>
     <script src="./assets/js/owl.carousel.min.js"></script>
     <script src="./assets/js/flipclock.min.js"></script>
-    <script src="./assets/js/homeScript.js"></script>
+    <script src="./assets/js/cardScript.js"></script>
 </body>
 
 </html>
