--- a/contactPage.html
+++ b/contactPage.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./assets/css/owl.carousel.css">
     <link rel="stylesheet" href="./assets/css/owl.theme.default.css">
     <link rel="stylesheet" href="./assets/css/flipclock.css" />
-    <link rel="stylesheet" href="./assets/css/Account/account.css">
+    <link rel="stylesheet" href="./assets/css/Contact/contact.css">
     <title>Bacola</title>
 </head>
 
@@ -141,8 +141,8 @@
                     </div>
                     <div class="col-lg-9 navbar">
                         <ul class="mainul">
-                            <li class="active"><a href="">HOME</a></li>
-                            <li><a href="./cardPage.html">SHOP</a></li>
+                            <li><a href="./homePage.html">HOME</a></li>
+                            <li class="active"><a href="./cardPage.html">SHOP</a></li>
                             <li><a href="">MEATS&SEAFOOD</a></li>
                             <li><a href="">BAKERY</a></li>
                             <li><a href="">BAVERAGES</a></li>
@@ -283,62 +283,77 @@
         </div>
     </header>
     <main>
-        <div class="container">
-            <div class="row myform">
-                <div class="col-5 m-5 login">
-                    <div class="login">
-                        <h2>Login</h2>
+        <div class="container owncontainer">
+            <div class="getintouch pb-5">
+                <h2>Get In Touch</h2>
+                <span>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita quaerat unde quam dolor culpa
+                    veritatis inventore, aut commodi eum veniam vel.
+                </span>
+            </div>
+            <div class="row cards">
+                <div class="contentcard col-lg-4 col-md-12 ">
+                    <div class="mycard">
+                        <i class="fas fa-map-marker-alt"></i>
+                        <h5>102 Street 2714 Donovan</h5>
+                        <p>Lorem ipsum dolar site amet discont</p>
                     </div>
-                    <div class="formsix-pos">
-                        <label for="username">Username or email address&nbsp;<span class="required">*</span></label>
-                        <div class="form-group i-email"> <input type="email" class="form-control mt-2" required=""
-                                id="email2" placeholder="Email Address *"> </div>
-                    </div>
-                    <div class="formsix-e">
-                        <label for="password">Password&nbsp;<span class="required ">*</span></label>
-                        <div class="form-group i-password mt-2"> <input type="password" class="form-control" required=""
-                                id="password2" placeholder="Password *"> </div>
-                    </div>
-                    <div class="login_remember_box"> <label class="control control--checkbox">Remember me
-                            <input type="checkbox"> <span class="control__indicator"></span> </label> <a href="#"
-                            class="forget_password"> Forgot Password </a> </div>
-                    <div class="login_btn_wrapper button"> <a href="#" class="btn btn-primary login_btn"
-                            style="background-color: navy;"> Login
-                        </a> </div>
-
-
-
                 </div>
-                <div class="col-5 m-5 register">
-                    <div class="login">
-                        <h2>Register</h2>
+                <div class="contentcard col-lg-4 col-md-12 ">
+                    <div class="mycard">
+                        <i class="fas fa-map-marker-alt"></i>
+                        <h5>102 Street 2714 Donovan</h5>
+                        <p>Lorem ipsum dolar site amet discont</p>
                     </div>
-                    <div class="formsix-pos">
-                        <label for="username">Email address&nbsp;<span class="required">*</span></label>
-                        <div class="form-group i-email"> <input type="email" class="form-control mt-2" required=""
-                                id="email2" placeholder="Email Address *"> </div>
-                    </div>
-                    <div class="formsix-e">
-                        <label for="password">Password&nbsp;<span class="required ">*</span></label>
-                        <div class="form-group i-password mt-2"> <input type="password" class="form-control" required=""
-                                id="password2" placeholder="Password *"> </div>
-                    </div>
-                    <div class="login_remember_box">
-                        <p>Your personal data will be used to support your experience throughout this website, to manage
-                            access to your account, and for other purposes described in our <a href="#">privacy policy</a>.</p>
-                    </div>
-                    <div class="login_btn_wrapper button"> <a href="#" class="btn btn-primary login_btn"
-                            style="background-color: navy;"> Register
-                        </a> </div>
-
-
-
                 </div>
-
-
+                <div class="contentcard col-lg-4 col-md-12 ">
+                    <div class="mycard">
+                        <i class="fas fa-map-marker-alt"></i>
+                        <h5>102 Street 2714 Donovan</h5>
+                        <p>Lorem ipsum dolar site amet discont</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container infodetails">
+            <div class="infocontent">
+                <h1>Send Us</h1>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita quaerat unde quam dolor culpa
+                    veritatis inventore, aut commodi eum veniam vel.</p>
+                <div class="contactdetails">
+                    <div class="row">
+                        <div class="col-6">
+                            <div class="form-group myform">
+                                <label>Your name *</label>
+                                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" >
+                              </div>
+                        </div>
+                        <div class="col-6">
+                            <div class="form-group myform">
+                                <label>Your email *</label>
+                                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" >
+                              </div>
+                        </div>
+                        <div class="col-12">
+                            <div class="form-group myform">
+                                <label>Subject</label>
+                                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" >
+                              </div>
+                        </div>
+                        <div class="col-12">
+                            <div class="form-group myform text">
+                                <label>Your message</label>
+                                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" >
+                              </div>
+                              <button type="button" class="btn btn-primary mt-3">Send Message</button>
+                        </div>
+                        
+                    </div>
+                </div>
             </div>
 
         </div>
+
     </main>
     <footer>
         <div class="main">
