Refreshed All Pages

--- a/homePage.html
+++ b/homePage.html
@@ -193,7 +193,24 @@
                 </div>
             </div>
             <hr>
-        
+        </section> 
+        <div class="fruitslist" style="position: absolute; z-index: 100;">
+            <ul>
+                <li>ExoticFruits</li>
+                <li>Fresh Fruits</li>
+                <li>Fresh Vegetables</li>
+                <li>Herbs</li>
+                <li>Party Try</li>
+            </ul>
+        </div>
+        <div class="homelist">
+            <ul>
+                <li>HOME1</li>
+                <li>HOME2</li>
+                <li>HOME3</li>
+                <li>HOME4</li>
+            </ul>
+        </div>
     </header>
     <main>
         <section id="slider">
@@ -562,8 +579,6 @@
                             <img class="card-img-top" src="./assets/img/product-image-62-346x310.jpg"
                                 alt="Card image cap">
                             <div class="card-body">
-                                <a href="">All Natural Italian-Style Chicken Meatballs</a>
-
                                 <a href="#" class="btn btn-primary">ADD TO CARD</a>
                             </div>
                         </div>
@@ -696,7 +711,7 @@
                             <img class="card-img-top" src="./assets/img/product-image-3-346x310 (1).jpg"
                                 alt="Card image cap">
                             <div class="card-body">
-                                <a href="">All Natural Italian-Style Chicken Meatballs</a>
+                                <span href="">All Natural Italian-Style Chicken Meatballs</span>
 
                                 <a href="#" class="btn btn-primary">ADD TO CARD</a>
                             </div>
@@ -714,7 +729,7 @@
                             <img class="card-img-top" src="./assets/img/product-image-2-346x310.jpg"
                                 alt="Card image cap">
                             <div class="card-body">
-                                <a href="">All Natural Italian-Style Chicken Meatballs</a>
+                                <span href="">All Natural Italian-Style Chicken Meatballs</span>
 
                                 <a href="#" class="btn btn-primary">ADD TO CARD</a>
                             </div>
